// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cloud-run flare prints correct headers prints dry-run header 1`] = `
"
[Dry Run] 🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No service ID specified. [-s,--service-id]
[Error] No project ID specified. [-p,--project-id]
[Error] No location specified. [-l,--location]
[Error] No case ID specified. [-c,--case-id]
[Error] No email specified. [-e,--email]
"
`;

exports[`cloud-run flare prints correct headers prints non-dry-run header 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No service ID specified. [-s,--service-id]
[Error] No project ID specified. [-p,--project-id]
[Error] No location specified. [-l,--location]
[Error] No case ID specified. [-c,--case-id]
[Error] No email specified. [-e,--email]
"
`;
